--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsbridge",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -39,6 +39,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0"
+    "node": "18.x || 20.x || 22.x"
   }
 }
